--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -8,7 +8,7 @@
 </p>
 <p>
   <b>at what cost:</b>
-  <%= link_to_name @stock.offering.price %>
+  <%= link_to_name @stock.offering.price, 'point' %>
 </p>
 <p>
   <b>the style:</b>
