--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -7,11 +7,11 @@
 <%= link_to 'locations', locations_path %>
 <%=h @location.address.display if @location.address %><br>
 <%=h @location.primary_phone.number if @location.primary_phone %><br>
-<h2>brands at this location</h2>
+<h2><%= link_to 'brands', location_brands_path(@location) %> at this location</h2>
 <% @location.brands.each do |b| %>
   <%= link_to b.name, location_brand_products_path(@location, b) %>
 <% end %>
-<h2>products you'll find and love</h2>
+<h2><%= link_to 'products', location_products_path(@location) %> you'll find and love</h2>
 <% @location.products.each do |p| %>
   <%= link_to p.name, location_product_path(@location, p) %>
 <% end %>
