--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,11 +3,11 @@
 <% @products.each do |product| %>
   <% content_tag_for :div, product do %>
     <%= primary_image product %>
-    <%= link_to_name product %>
+    <%= @location ? link_to(product.name, location_product_path(@location, product)) : link_to_name(product) %>
     <%= link_to_name product.brand %>
 		<% stock = Stock.find_by_product_and_location(product, @location) %>
 		<%= stock.length.to_s + ' in stock' unless stock.blank? %>
-		<%= link_to 'stock more', new_location_stock_path(@location, :product_id => product.id) %>
+		<%= link_to 'stock more', new_location_stock_path(@location, :product_id => product.id) if @location && current_user.is_authorized_to_edit_offerings_at(@location) %>
     <%= link_to 'edit', edit_product_path(product) %>
     <%= attach_image_link product %>
     <%= link_to_remote 'attach site', :url => attach_site_path(product), :method => :get, :update => 'uses' %>
