--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <%= javascript_include_tag :defaults %>
     <%= GMap.header if @map %>
     <%= @map.to_html if @map %>
+		<title>Splurgel</title>
   </head>
   <body>
 		<%= link_to_backup %>
@@ -19,5 +20,13 @@
     </div>
     <h1 id='splurgel_title'>Splurgel=======!</h1>
     <%= yield %>
+		<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<script type="text/javascript">
+		var pageTracker = _gat._getTracker("UA-333706-2");
+		pageTracker._trackPageview();
+		</script>
   </body>
 </html>
