--- a/app/views/user_mailer/activation.html.erb
+++ b/app/views/user_mailer/activation.html.erb
@@ -1,3 +1,11 @@
-<%=h @user.login %>, your account has been activated.  Welcome aboard!
+<%=h @user.login %>, your account has been activated.  Welcome to Splurgel!
 
   <%=h @url %>
+
+At Splurgel, you can find the products you like and add ones that we don't have yet.  Follow your favorite stores to be notified when they get new inventory.. and much more.
+
+Retail isn't a joke anymore.. we take it seriously and we need to get it right.  Some stuff is cool and some stuff just isn't.  That's why we're so happy to have you as a member.  You can help us figure it all out by tagging, commenting, adding images, and linking to websites.
+
+Well, see you in there!
+
+-the Splurgel team
