--- a/app/views/user_mailer/signup_notification.html.erb
+++ b/app/views/user_mailer/signup_notification.html.erb
@@ -1,8 +1,10 @@
-Your account has been created.
+We are ready to let you get started.  Just click the link and you'll be all set.
+
+  <%=h @url %>
 
   Username: <%=h @user.login %>
   Password: <%=h @user.password %>
 
-Visit this url to activate your account:
+We'll get right back to you with your welcome message :).
 
-  <%=h @url %>
+-the Splurgel team
