--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,15 +1,9 @@
-  <%=h @group.name %>!<br>
-administered by  <%= link_to_name @group.administrator %><br><br>
-  <%= primary_image @group %>
-  <%= @group.users.count %> members!<br>
-  <%= attach_image_link @group %>
-  <%= attachable_sites @group %>
-  <%= follow_link @group %>
+<h1><%=h @group.name %>!</h1><%= follow_link @group %>  <%= join_group_link @group %>
+<%= primary_image @group %>
+<%= pluralize @group.users.count, 'member' %><br>
+<%= attach_image_link @group %>
+<%= attachable_sites @group %>
   
-  <%= render :partial => 'tags/tag_form', :locals => {:obj => @group} %>
-  <%= render :partial => 'comments/comment_form', :locals => {:obj => @group} %>
-  
-  <%= link_to 'join group', memberships_path(:membership => {:group_id => @group}), :method => :post %>
-<%= link_to 'edit', edit_group_path(@group) %> |
-<%= link_to 'groups', groups_path %>
+<h2>tags</h2><%= render :partial => 'tags/tag_form', :locals => {:obj => @group} %>
+<h2>comments</h2><%= render :partial => 'comments/comment_form', :locals => {:obj => @group} %>
 
