--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
     <%= render :partial => 'shared/search_form', :locals => {:model => controller.controller_name} if searchable_models.include?(controller.controller_name) %>
 
     <div id='left_nav'>
-      <% [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores styles stocks taggings tags users website_uses websites phones phone_uses authorizations notices delivered_notices]].each do |set| %>
+      <% viewable_controllers = (logged_in? && current_user.admin?) ? [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores styles stocks taggings tags users website_uses websites phones phone_uses authorizations notices delivered_notices]] : 
+			[%w[brands groups locations products stores tags]] %>
+			<% viewable_controllers.each do |set| %>
         <% set.each do |resource| %>
-          <%= link_to resource, "/#{resource}" %> <%= link_to '(cr8)', "/#{resource}/new" %><br>
+          <%= link_to resource, "/#{resource}" %><br>
         <% end %>
       <% end %>
     </div>
