--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,18 +1,12 @@
 <h1>stores</h1>
 
 <table>
-  <tr>
-    <th></th>
-    <th>administrator</th>
-  </tr>
-
 <% for store in @stores %>
   <tr>
     <td><%= link_to_name store %></td>
-    <td><%= link_to_name store.administrator %></td>
-    <td><%= link_to 'edit', edit_store_path(store) %></td>
+    <td><%= link_to 'edit', edit_store_path(store) if current_user == store.user %></td>
     <td><%= attach_image_link store %></td>
-    <td><%= link_to 'new branch', new_store_location_path(store) %></td>
+    <td><%= link_to 'new branch', new_store_location_path(store) if current_user.is_authorized_to_create_locations_of(store) %></td>
   </tr>
 <% end %>
 </table>
