--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<h1>products<%= ' by ' + @brand.name if @brand %><%= ' at ' + @location.name if @location %></h1>
+<h1>products<%= ' by ' + @brand.name if @brand %><%= ' at ' + @location.name if @location %><%= ' at ' + @store.name if @store %></h1>
 
 <% @products.each do |product| %>
   <% content_tag_for :div, product do %>
@@ -10,7 +10,6 @@
 		<%= stock.length.to_s + ' in stock' unless stock.blank? %>
 		<%= low_price_link product %>-<%= high_price_link product %>
 		<%= link_to 'stock more', new_location_stock_path(@location, :product_id => product.id) if @location && current_user.is_authorized_to_edit_offerings_at(@location) %>
-    <%= link_to 'edit', edit_product_path(product) %>
     <%= attach_image_link product %>
     <%= link_to_remote 'attach site', :url => attach_site_path(product), :method => :get, :update => 'uses' %>
   <% end %>
