--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
     <div id='left_nav'>
       <% viewable_controllers = (logged_in? && current_user.admin?) ? [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores styles stocks taggings tags users website_uses websites phones phone_uses authorizations notices delivered_notices]] : 
-			[%w[brands groups locations products stores tags]] %>
+			[%w[brands groups locations products stores tags networks cities websites]] %>
 			<% viewable_controllers.each do |set| %>
         <% set.each do |resource| %>
           <%= link_to resource, "/#{resource}" %><br>
