--- a/app/views/networks/index.html.erb
+++ b/app/views/networks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>networks<%= ' tagged with ' + @tag.name if @tag %></h1>
+<h1>networks<%= ' tagged with ' + @tag.name if @tag %><%= ' in ' + @city.name if @city %><%= ' in ' + @state.name if @state %></h1>
 
 <table>
 <% for network in @networks %>
@@ -7,7 +7,7 @@
     <td><%= link_to_name network.city %></td>
     <td><%= link_to_name network.state %></td>
 		<td><%= join_network_link network %></td>
-    <td><%= link_to 'edit', edit_network_path(network) %></td>
+		<td><%= link_to_scoped_collection 'locations', network.city %>
     <td><%= attach_image_link network %></td>
     <td><%= link_to_remote 'attach site', :url => attach_site_path(network), :update => 'uses', :method => :get %></td>
   </tr>
