--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,17 @@
 <h1><%= @product.name %></h1>  <%= follow_link @product %>
+<%= lists @product %>
+<%= primary_image @product %>
 <%= @price.point if @price %><br>
 <%= @offering.stocks.length.to_s + ' in stock' if @offering %>
 <%= link_to_name @product.brand %><br>
 <%= attach_image_link @product %><br>
+<%= link_to 'edit image set', product_image_uses_path(@product) %>
+<%= attachable_sites @product %><br>
 <%= render :partial => 'tags/tag_form', :locals => {:obj => @product} %><br>
-<%= lists @product %>
-<%= link_to 'offer this product', new_offering_path(:offering => {:product_id => @product.id}) %>
+<%= render :partial => 'comments/comment_display', :locals => {:obj => @product} %>
 <%= link_to 'add style', new_product_style_path(@product) %>
-<%= link_to 'edit', edit_product_path(@product) %>
-<%= link_to 'stock', new_location_stock_path(@offering.location, :product_id => @product.id) if @offering && current_user.is_authorized_to_edit_offerings_at(@offering.location) %>
-<%= link_to 'set price', new_offering_price_path(@offering) if @offering && current_user.is_authorized_to_edit_offerings_at(@offering.location) %>
-<%= link_to 'products', products_path %>
-
+<%= link_to 'offer this product', new_offering_path(:offering => {:product_id => @product.id}) if current_user.is_authorized_to_create_offerings %>
+<% if @offering && current_user.is_authorized_to_edit_offerings_at(@offering.location) %>
+	<%= link_to 'stock', new_location_stock_path(@offering.location, :product_id => @product.id) %>
+	<%= link_to 'set price', new_offering_price_path(@offering) %>
+<% end %>
